--- a/back/config/packages/security.yaml
+++ b/back/config/packages/security.yaml
@@ -27,6 +27,7 @@ security:
             pattern: ^/api/login
             stateless: true
             json_login:
+                username_path: email
                 check_path: /api/login_check
                 success_handler: lexik_jwt_authentication.handler.authentication_success
                 failure_handler: lexik_jwt_authentication.handler.authentication_failure
