--- a/back/composer.json
+++ b/back/composer.json
@@ -12,15 +12,16 @@
         "doctrine/doctrine-migrations-bundle": "^3.3",
         "doctrine/orm": "^2.17",
         "lexik/jwt-authentication-bundle": "^2.20",
+        "nelmio/cors-bundle": "^2.4",
         "symfony/console": "7.0.*",
         "symfony/dotenv": "7.0.*",
         "symfony/flex": "^2",
         "symfony/framework-bundle": "7.0.*",
+        "symfony/mime": "7.0.*",
         "symfony/rate-limiter": "7.0.*",
         "symfony/runtime": "7.0.*",
         "symfony/security-bundle": "7.0.*",
-        "symfony/yaml": "7.0.*",
-        "ext-http": "*"
+        "symfony/yaml": "7.0.*"
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.5",
